# Glen_Jobs

./: .gitignore  CLAUDE.md  README.md  daily_run_workflow.yml  main.py  pyproject.toml  roadmap.md  todo.md
.github/workflows/: daily_run_workflow.yml
cv/: cv_template.tex  letter_template.tex
inputs/: base_cv.txt
tests/: test_engine.py  test_pipeline.py
